crates/cli/tests/snapshots/generate_test__generate__doesnt_generate_files_when_dryrun.snap
---
source: crates/cli/tests/generate_test.rs
expression: assert.output_standardized()
---
standard ───────────────────────────────────────────────────

  Template title (dry run)
  Some description of the template and its files.

- created --➤ test/file.ts
- created --➤ test/file.txt
- created --➤ test/folder/nested-file.ts
- created --➤ test/other.txt
- created --➤ test/image.jpg
