crates/cli/tests/snapshots/generate_test__generate__generates_files_into_default_dest.snap
---
source: crates/cli/tests/generate_test.rs
expression: assert.output_standardized()
---
dest ───────────────────────────────────────────────────────

  Template title
  Some description of the template and its files.


- created --➤ apps/foo-bar/file.txt
