crates/cli/tests/snapshots/generate_test__generate__handles_raw_files.snap
---
source: crates/cli/tests/generate_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"./test/file.txt\")).unwrap()"
---
2
