crates/cli/tests/snapshots/generate_test__generate__overwrites_existing_files_when_interpolated_path.snap
---
source: crates/cli/tests/generate_test.rs
expression: assert.output_standardized()
---
vars ───────────────────────────────────────────────────────

  Variable testing
  A template for testing all variable config combinations.


- replaced -➤ test/control.txt
- replaced -➤ test/expressions.txt
- replaced -➤ test/file-default-0.txt
- replaced -➤ test/filters.txt
