crates/cli/tests/snapshots/generate_test__generate__renders_and_interpolates_templates-2.snap
---
source: crates/cli/tests/generate_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"./test/control.txt\")).unwrap()"
---
Should show


Looping multenum:

1. b


Including partial:
THIS WAS INCLUDED


Filters:
DEFAULT
246
1
