crates/cli/tests/snapshots/generate_test__generate__supports_custom_filters.snap
---
source: crates/cli/tests/generate_test.rs
expression: standardize_separators(content)
---
STRINGS:

camel_case = someRandomValue
kebab_case = some-random-value
pascal_case = SomeRandomValue
snake_case = some_random_value
upper_kebab_case = SOME-RANDOM-VALUE
upper_snake_case = SOME_RANDOM_VALUE

PATHS:

path_join = some/dir/another/dir
path_join_with_var = ./test/another/dir

RELATIVE PATHS:

to_up = ../../../../foo/bar
to_down = ../../foo/bar
to_down_norel = ../../foo/bar

from_up = .
from_down = ../dir
from_down_norel = ../../some/dir


rel_vars1 = ..
rel_vars2 = sub
rel_vars3 = sub
rel_vars4 = ..
